--- a/src/plugin/ICAP/DropZoneBundle/Resources/views/DropZone/document.html.twig
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/views/DropZone/document.html.twig
@@ -4,11 +4,12 @@
 {% endblock %}
 
 {% block dropzone_content %}
-    <h3>
-        {{ 'Drop'|trans }}
-    </h3>
-    {% include "ICAPDropZoneBundle:DropZone:dropForm.html.twig" %}
-
+    <div class="container">
+        <h3>
+            {{ 'Add a document'|trans }}
+        </h3>
+        {% include "ICAPDropZoneBundle:DropZone:documentForm.html.twig" %}
+    </div>
 {% endblock %}
 
 {% block javascripts %}
