--- a/src/plugin/ICAP/DropZoneBundle/Resources/views/DropZone/simpleShowDocument.html.twig
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/views/DropZone/simpleShowDocument.html.twig
@@ -1,9 +1,6 @@
 <div class="row">
     <div class="col-md-9">
-        Document :
-        {{ document.url }}
-        {{ document.path }}
-        {{ document.resourceNode.id }}
+        {% include 'ICAPDropZoneBundle:DropZone:simpleShowDocument.html.twig' %}
     </div>
 
     <div class="col-md-3">
